<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_calendar_fav"
        android:title="@string/title_favorite" />

</menu>