<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.test.ui.fragments.favorites.FavoritesFragment">

    <com.freshly.design.text.TextTitle
        android:id="@+id/tvEventTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/ivEventFav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Event name. Event name. Event name. Event name." />

    <com.freshly.design.text.TextSecondary
        android:id="@+id/tvEventSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvEventTitle"
        app:layout_constraintStart_toStartOf="@id/tvEventTitle"
        app:layout_constraintTop_toBottomOf="@id/tvEventTitle"
        tools:text="Tue, 12 Dec 2021 18:00" />

    <com.freshly.design.image.IconImageView
        android:id="@+id/ivEventFav"
        android:layout_width="@dimen/icon_width_min"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:paddingStart="@dimen/fav_icon_padding_start"
        android:paddingEnd="@dimen/fav_icon_padding_end"
        android:src="@drawable/ic_add_fav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>